# rakuyomi-android

./: .gitignore  ANDROID_SUPPORT.md  API_INTEGRATION.md  CHANGES.md  README.md  SESSION_LOG.md  SOURCE_INSTALL_SUMMARY.md  STATUS.md  build_android.sh  deploy.sh  install_method1.sh  network_adb.sh  network_adb_commands.txt
backend/: Cargo.toml
backend/android_ffi/: .gitignore  Cargo.toml  build.sh
backend/android_ffi/.cargo/: config.toml
backend/android_ffi/src/: cbz.rs  downloader.rs  lib.rs
backend/android_ffi/src/sources/: mangapill.rs  mod.rs  weebcentral.rs
docs/: rakuyomi-cbz-research.md
frontend/rakuyomi.koplugin/: AvailableSourcesListing.lua  ChapterListing.lua  MangaSearchResults.lua  Platform.lua  Settings.lua  SourceSettings.lua  main.lua
frontend/rakuyomi.koplugin/platform/: android_ffi_platform.lua
frontend/rakuyomi.koplugin/widgets/: SettingItemValue.lua
test/: quick_check.sh
