[package]
name = "rakuyomi_android"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]
name = "rakuyomi"

[dependencies]
# Keep it minimal - no shared crate for now
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"

# We'll add shared back later once we fix cross-compilation