[package]
name = "rakuyomi_android"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib"]
name = "rakuyomi"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync", "fs"] }
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2.5"
regex = "1.10"
urlencoding = "2.1"
zip = { version = "2.0", default-features = false, features = ["deflate"] }